fixing more linting warnings

--- a/subworkflows/local/align_collapse_contigs/meta.yml
+++ b/subworkflows/local/align_collapse_contigs/meta.yml
@@ -14,6 +14,8 @@ components:
   - ivar/consensus
   - rename_fasta_header
   - nocov_to_reference
+  - rename/fasta/header
+  - nocov/to/reference
 input:
   - ch_references_members:
       description: |
