--- a/subworkflows/local/bam_stats_metrics/meta.yml
+++ b/subworkflows/local/bam_stats_metrics/meta.yml
@@ -16,6 +16,7 @@ components:
   - picard/collectmultiplemetrics
   - mosdepth
   - bam_stats_samtools
+  - custom/mpileup
   - custom_mpileup
 input:
   - sort_bam_ref:
