--- a/subworkflows/local/fastq_assembly/meta.yml
+++ b/subworkflows/local/fastq_assembly/meta.yml
@@ -19,6 +19,7 @@ components:
   - cat/cat
   - prinseqplusplus
   - utils_nfcore_viralmetagenome_pipeline
+  - nocontigsamplestomultiqc
 input:
   - ch_reads:
       description: |
