--- a/subworkflows/local/utils_nfcore_viralmetagenome_pipeline/meta.yml
+++ b/subworkflows/local/utils_nfcore_viralmetagenome_pipeline/meta.yml
@@ -13,6 +13,9 @@ components:
   - utils_nfschema_plugin
   - utils_nfcore_pipeline
   - utils_nextflow_pipeline
+  - completionemail
+  - imnotification
+  - completionsummary
 input:
   - version:
       description: |
