--- a/subworkflows/local/bam_variants_ivar/meta.yml
+++ b/subworkflows/local/bam_variants_ivar/meta.yml
@@ -12,6 +12,7 @@ keywords:
 components:
   - ivar/variants
   - ivar_variants_to_vcf
+  - ivar/variants/to/vcf
   - bcftools/sort
   - bcftools/filter
 input:
