--- a/modules/local/blast_filter/environment.yml
+++ b/modules/local/blast_filter/environment.yml
@@ -3,6 +3,7 @@ channels:
   - conda-forge
   - bioconda
 dependencies:
+  - conda-forge::python=3.9.21
   - conda-forge::pandas=2.2.3
   - pip
   - pip:
