--- a/modules/local/blast_filter/environment.yml
+++ b/modules/local/blast_filter/environment.yml
@@ -5,6 +5,4 @@ channels:
 dependencies:
   - conda-forge::python=3.9.21
   - conda-forge::pandas=2.2.3
-  - pip
-  - pip:
-      - biopython==1.85
+  - conda-forge::biopython=1.85
