--- a/subworkflows/local/bam_variants_ivar/meta.yml
+++ b/subworkflows/local/bam_variants_ivar/meta.yml
@@ -21,10 +21,9 @@ input:
         The input channel containing BAM files with their corresponding reference sequences
         Structure: [ val(meta), path(bam), path(fasta) ]
   - save_stats:
+      type: boolean
       description: |
         Whether to save variant statistics (mpileup files)
-        Type: value
-        Pattern: "true|false"
 output:
   - tsv:
       description: |
