--- a/subworkflows/local/fastq_fasta_map_consensus/meta.yml
+++ b/subworkflows/local/fastq_fasta_map_consensus/meta.yml
@@ -26,52 +26,48 @@ input:
         Input channel containing reference sequences and corresponding reads
         Structure: [ val(meta), path(fasta), path(fastq) ]
   - mapper:
+      type: string
       description: |
         Mapping algorithm to use
-        Type: value
-        Pattern: "bwamem2|bowtie2|bwa"
+      enum: ["bwamem2", "bowtie2", "bwa"]
   - umi:
+      type: boolean
       description: |
         Whether UMI-based deduplication should be used
-        Type: value
-        Pattern: "true|false"
   - deduplicate:
+      type: boolean
       description: |
         Whether to perform deduplication of mapped reads
-        Type: value
-        Pattern: "true|false"
   - call_variants:
+      type: boolean
       description: |
         Whether to call variants from mapped reads
-        Type: value
-        Pattern: "true|false"
   - variant_caller:
+      type: string
       description: |
         Variant calling method to use
-        Type: value
-        Pattern: "bcftools|ivar"
+      enum: ["bcftools", "ivar"]
   - consensus_caller:
+      type: string
       description: |
         Consensus calling method to use
-        Type: value
-        Pattern: "bcftools|ivar"
+      enum: ["bcftools", "ivar"]
   - mapping_stats:
+      type: boolean
       description: |
         Whether to generate mapping statistics and reports
-        Type: value
-        Pattern: "true|false"
   - min_mapped_reads:
+      type: integer
       description: |
         Minimum number of mapped reads required to proceed
-        Type: integer
   - min_len:
+      type: integer
       description: |
         Minimum consensus sequence length for quality filtering
-        Type: integer
   - n_100:
+      type: integer
       description: |
         Maximum number of consecutive Ns allowed in consensus sequences
-        Type: integer
 output:
   - consensus_reads:
       description: |
