--- a/subworkflows/local/bam_vcf_consensus_bcftools/meta.yml
+++ b/subworkflows/local/bam_vcf_consensus_bcftools/meta.yml
@@ -30,10 +30,9 @@ input:
         Reference FASTA sequences
         Structure: [ val(meta), path(fasta) ]
   - mapping_stats:
+      type: boolean
       description: |
         Whether to save mapping statistics during mask creation
-        Type: value
-        Pattern: "true|false"
 output:
   - consensus:
       description: |
