--- a/nextflow.config
+++ b/nextflow.config
@@ -409,7 +409,7 @@ includeConfig params.custom_config_base && (!System.getenv('NXF_OFFLINE') || !pa
 
 // Load nf-core/viralmetagenome custom profiles from different institutions.
 // nf-core: Optionally, you can add a pipeline-specific nf-core config at https://github.com/nf-core/configs
-// includeConfig params.custom_config_base && (!System.getenv('NXF_OFFLINE') || !params.custom_config_base.startsWith('http')) ? "${params.custom_config_base}/pipeline/viralmetagenome.config" : "/dev/null"
+includeConfig params.custom_config_base && (!System.getenv('NXF_OFFLINE') || !params.custom_config_base.startsWith('http')) ? "${params.custom_config_base}/pipeline/viralmetagenome.config" : "/dev/null"
 
 // Set default registry for Apptainer, Docker, Podman, Charliecloud and Singularity independent of -profile
 // Will not be used unless Apptainer / Docker / Podman / Charliecloud / Singularity are enabled
@@ -496,7 +496,7 @@ manifest {
     mainScript      = 'main.nf'
     defaultBranch   = 'master'
     nextflowVersion = '!>=24.10.5'
-    version         = '0.1.3dev'
+    version         = '1.0.0'
     doi             = ''
 }
 
