--- a/subworkflows/local/bam_stats_metrics/meta.yml
+++ b/subworkflows/local/bam_stats_metrics/meta.yml
@@ -19,7 +19,7 @@ components:
   - custom/mpileup
   - custom_mpileup
 input:
-  - sort_bam_ref:
+  - ch_sort_bam_ref:
       description: |
         Sorted BAM files with their corresponding reference sequences
         Structure: [ val(meta), path(bam), path(ref) ]
