--- a/subworkflows/local/bam_variants_bcftools/meta.yml
+++ b/subworkflows/local/bam_variants_bcftools/meta.yml
@@ -14,7 +14,7 @@ components:
   - bcftools/norm
   - bcftools/filter
 input:
-  - bam_fasta:
+  - ch_bam_fasta:
       description: |
         The input channel containing BAM files with their corresponding reference sequences
         Structure: [ val(meta), path(bam), path(fasta) ]
