--- a/.nf-core.yml
+++ b/.nf-core.yml
@@ -9,7 +9,7 @@ nf_core_version: 3.3.2
 repository_type: pipeline
 template:
   author: Joon Klaps, Philippe Lemey, Liana Kafetzopoulou
-  description: a bioinformatics best-practice analysis pipeline for untargeted
+  description: A bioinformatics best-practice analysis pipeline for untargeted
     viral genome reconstruction and to identify intra-host variants from
     metagenomic sequencing data.
   force: false
