--- a/subworkflows/local/fastq_fasta_iterative_consensus/meta.yml
+++ b/subworkflows/local/fastq_fasta_iterative_consensus/meta.yml
@@ -12,7 +12,7 @@ keywords:
 components:
   - fastq_fasta_map_consensus
 input:
-  - reference_reads:
+  - ch_reference_reads:
       description: |
         Input reference sequences and corresponding reads
         Structure: [ val(meta), path(reference), path(fastq) ]
