--- a/subworkflows/local/fastq_fasta_map_consensus/meta.yml
+++ b/subworkflows/local/fastq_fasta_map_consensus/meta.yml
@@ -21,7 +21,7 @@ components:
   - bam_stats_filter
   - utils_nfcore_viralmetagenome_pipeline
 input:
-  - reference_reads:
+  - ch_reference_reads:
       description: |
         Input channel containing reference sequences and corresponding reads
         Structure: [ val(meta), path(fasta), path(fastq) ]
