--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,7 @@
 {
     "name": "nfcore",
     "image": "nfcore/gitpod:latest",
+    "postCreateCommand": "python -m pip install --upgrade -r ../requirements-dev.txt -e ../ && pre-commit install --install-hooks",
     "remoteUser": "gitpod",
     "runArgs": ["--privileged"],
 
@@ -14,16 +15,7 @@
             },
 
             // Add the IDs of extensions you want installed when the container is created.
-            "extensions": [
-                "ms-python.python",
-                "ms-python.vscode-pylance",
-                "nf-core.nf-core-extensionpack",
-                "GitHub.copilot",
-                "xuedao.super-themes",
-                "streetsidesoftware.code-spell-checker"
-            ]
+            "extensions": ["ms-python.python", "ms-python.vscode-pylance", "nf-core.nf-core-extensionpack"]
         }
-    },
-
-    "postCreateCommand": "pre-commit install --install-hooks && nextflow self-update && pip install mkdocs-material"
+    }
 }
