migrating test profiles to nf-test, refinement of them can come later

--- a/nextflow.config
+++ b/nextflow.config
@@ -397,7 +397,7 @@ profiles {
     test_umi          { includeConfig 'conf/tests/test_umi.config'          }
     test_fail_mapped  { includeConfig 'conf/tests/test_fail_mapped.config'  }
     test_fail_db      { includeConfig 'conf/tests/test_fail_db.config'      }
-    test_nothing      { includeConfig 'conf/tests/test_nothing.config'      }
+    test_minimal      { includeConfig 'conf/tests/test_minimal.config'      }
 }
 
 // Load nf-core custom profiles from different institutions
