adding subset annotation df

--- a/conf/tests/test_fail_db.config
+++ b/conf/tests/test_fail_db.config
@@ -37,6 +37,7 @@ params {
     skip_read_classification    = true
     kaiju_db                    = params.pipelines_testdata_base_path + 'viralmetagenome/db/kaiju.tar.gz'
     reference_pool              = params.pipelines_testdata_base_path + 'viralmetagenome/db/ebov-zaire.fasta'
+    annotation_db               = params.pipelines_testdata_base_path + 'viralmetagenome/db/virosaurus90_vertebrate-20200330.subset.fas.gz'
 
     skip_variant_calling        = true
     intermediate_mapping_stats  = true
