--- a/conf/tests/test_full.config
+++ b/conf/tests/test_full.config
@@ -39,6 +39,7 @@ params {
     save_databases              = false
     kaiju_db                    = params.pipelines_testdata_base_path + 'viralmetagenome/db/kaiju.tar.gz'
     reference_pool              = params.pipelines_testdata_base_path + 'viralmetagenome/db/sarscov2.fasta'
+    annotation_db               = params.pipelines_testdata_base_path + 'viralmetagenome/db/virosaurus90_vertebrate-20200330.subset.fas.gz'
 
     mapping_constraints         = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/mapping_constraints.csv'
     checkv_db                   = params.pipelines_testdata_base_path + 'viralmetagenome/db/checkv_minimal_db.tar'
