--- a/conf/tests/test_group.config
+++ b/conf/tests/test_group.config
@@ -40,7 +40,8 @@ params {
     kaiju_db                    = params.pipelines_testdata_base_path + 'viralmetagenome/db/kaiju.tar.gz'
 
     reference_pool              = params.pipelines_testdata_base_path + 'viralmetagenome/db/sarscov2.fasta'
-    mapping_constraints          = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/mapping_constraints_group.csv'
+    mapping_constraints         = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/mapping_constraints_group.csv'
+    annotation_db               = params.pipelines_testdata_base_path + 'viralmetagenome/db/virosaurus90_vertebrate-20200330.subset.fas.gz'
 
     save_intermediate_polishing = true
     intermediate_mapping_stats  = false
