--- a/conf/tests/test_umi.config
+++ b/conf/tests/test_umi.config
@@ -39,6 +39,7 @@ params {
     skip_sspace_basic           = false
     kaiju_db                    = params.pipelines_testdata_base_path + 'viralmetagenome/db/kaiju.tar.gz'
     reference_pool              = params.pipelines_testdata_base_path + 'viralmetagenome/db/sarscov2.fasta'
+    annotation_db               = params.pipelines_testdata_base_path + 'viralmetagenome/db/virosaurus90_vertebrate-20200330.subset.fas.gz'
 
     mapping_constraints         = params.pipelines_testdata_base_path + 'viralmetagenome/samplesheets/mapping_constraints.csv'
     save_intermediate_polishing = true
