skipping snpeff due to large contianer image

--- a/conf/tests/test_full.config
+++ b/conf/tests/test_full.config
@@ -48,6 +48,7 @@ params {
     save_intermediate_polishing = true
     min_mapped_reads            = 100
     intermediate_mapping_stats  = true
+    skip_vcf_annotation         = true
 }
 
 process {
