--- a/conf/tests/test_group.config
+++ b/conf/tests/test_group.config
@@ -48,6 +48,7 @@ params {
     min_mapped_reads            = 100
     deduplicate                 = false
     skip_checkv                 = true
+    skip_vcf_annotation         = true
     iterative_refinement_cycles = 1
 }
 
