--- a/conf/tests/test_umi.config
+++ b/conf/tests/test_umi.config
@@ -47,6 +47,7 @@ params {
     intermediate_mapping_stats  = true
     min_mapped_reads            = 100
     skip_checkv                 = true
+    skip_vcf_annotation         = true
 
     arguments_fastp             = '--dedup --dup_calc_accuracy 2'
     arguments_umitools_extract  = '--bc-pattern="NNNN"'
